# gtl

./: .gitignore  CMakeLists.txt  README.md
include/gtl/ogl/: buffer.h  draw.h  openglexception.h  program.h  shader.h  shaderexception.h  texture.h  transformfeedback.h  vertexarray.h
src/: placeholder.cpp
